Switch to martinthomson/i-d-template@v1m (#40)
As requested in https://github.com/martinthomson/i-d-template/pull/259

--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -42,10 +42,10 @@ jobs:
           refcache-
 
     - name: "Build Drafts"
-      uses: martinthomson/i-d-template@v1
+      uses: martinthomson/i-d-template@v1m
 
     - name: "Update GitHub Pages"
-      uses: martinthomson/i-d-template@v1
+      uses: martinthomson/i-d-template@v1m
       if: ${{ github.event_name == 'push' }}
       with:
         make: gh-pages
