Try a better way to use in-solidarity (#78)

--- a/.github/in-solidarity.yml
+++ b/.github/in-solidarity.yml
@@ -1,1 +1,2 @@
-isb-ietf-config/.github/in-solidarity.yml
+# use configuration from https://github.com/NTAP/isb-ietf-config
+_extends: NTAP/isb-ietf-config
