--- a/.github/workflows/markdownlint.yml
+++ b/.github/workflows/markdownlint.yml
@@ -19,12 +19,7 @@ on:
 jobs:
   lint-changelog:
     name: Lint Markdown
-    runs-on: ubuntu-latest
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-    - name: Run markdownlint
-      uses: docker://avtodev/markdown-lint:v1
-      with:
-        config: '.github/workflows/markdownlint.json'
-        args: 'draft-*.md'
+    uses: avto-dev/markdown-lint@v1.5.0
+    with:
+      config: '.github/workflows/markdownlint.json'
+      args: 'draft-*.md'
