--- a/.github/workflows/markdownlint.yml
+++ b/.github/workflows/markdownlint.yml
@@ -21,8 +21,10 @@ jobs:
     name: Lint Markdown
     runs-on: ubuntu-latest
     steps:
+    - name: Check out code
+      uses: actions/checkout@v2
     - name: Run markdownlint
-      uses: avto-dev/markdown-lint@v1.5.0
+      uses: docker://avtodev/markdown-lint:master
       with:
         config: '.github/workflows/markdownlint.json'
         args: 'draft-*.md'
